--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,3 +1,40 @@
-version = 2.5.0
+version = 3.0.6
 
-align = more
+maxColumn = 120
+assumeStandardLibraryStripMargin = true
+
+docstrings.style = Asterisk
+docstrings.removeEmpty = true
+docstrings.oneline = fold
+docstrings.wrap = yes
+docstrings.wrapMaxColumn = 72
+
+newlines.forceBeforeMultilineAssign = any
+
+align.preset = more
+align.tokens."+" = [
+  ":=",
+  {
+    code: "=",
+    owner: "(Enumerator.Val|Term.Assign|Defn.(Va(l|r)|Def|Type))"
+  },
+  "%%",
+  "%",
+  "<-",
+  "->",
+  {
+    code = "extends",
+    owners = [{
+      regex = "Template"
+      parents = [ "Defn\\.(Class|Trait|Object)" ]
+    }]
+  },
+  {
+    code = ":"
+    owners = [{
+      regex = "Term\\.Param"
+      parents = [ "Ctor\\.Primary" ]
+    }]
+  },
+  "//"
+]
